--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,15 @@
 [build]
   publish = "."
+  functions = "netlify/functions"
+  command = "npm install"
+
+[functions]
+  node_bundler = "esbuild"
 
 [functions."claude-proxy"]
-  # Raise timeout to the Netlify maximum (26s)
-  # Default is 10s — Claude API calls for complex schedules need more time
+  # Raise timeout to Netlify maximum (26s on Pro plan)
+  # Claude API calls for complex schedules need more time
   timeout = 26
+
+[functions."storage-proxy"]
+  timeout = 10
